--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dev branch</title>
 </head>
 <body>
- Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi, enim?
- Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima illum quas odit. Consequuntur laborum mollitia, odio aliquid cumque error earum.   
+ Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nemo reiciendis pariatur assumenda soluta eum. 
 </body>
 </html>
